--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,16 @@
     <title>Bookworld</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <!-- <h1>Hello</h1> -->
+    </div>
+    <!-- <script
+      crossorigin
+      src="https://unpkg.com/react@18/umd/react.development.js"
+    ></script>
+    <script
+      crossorigin
+      src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
+    ></script> -->
   </body>
 </html>
